manifest/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskweb-deployment
  labels:
    app: flaskweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskweb
  template:
    metadata:
      labels:
        app: flaskweb
    spec:
      containers:
        - name: flaskweb
          image: okehieuchenna/flask-project:133
          ports:
            - containerPort: 5000
