manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: flaskweb
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
